# kwaixiaodian-python-sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint-typecheck.yml  release.yml  tests.yml
docs/: CHANGELOG.md  api-reference.md  authentication.md  best-practices.md  catalog_structure.json  error-handling.md  examples.md  index.md  quickstart.md  快手小店官方文档介绍.md
docs/api/: base-modules.md  core-clients.md  distribution-cps.md  distribution-investment.md  distribution-second.md  distribution-seller.md  distribution-service.md  funds-service.md  invoice-service.md  item-service.md  logistics-service.md  order-service.md  refund-service.md  shop-service.md
docs/开发指南和规则协议/平台介绍/: 平台简介.md
docs/开发指南和规则协议/平台介绍/开放平台/: 开放平台入驻指南.md  开放平台应用开发指南.md  开放平台开发者角色说明.md
docs/开发指南和规则协议/平台介绍/服务市场/: 服务市场入驻指南.md
docs/开发指南和规则协议/开发文档/: API调用说明.md  API限流说明.md  APP授权说明.md  SDK使用说明.md  新手指南.md  消息服务说明.md  物流公司编号.md  订单优惠信息子类型说明.md  返回码说明.md  集成中心说明.md
docs/开发指南和规则协议/规则协议/历史协议/: 开放平台开发者协议（已失效）.md  快手服务市场服务协议（服务商版）（已失效）.md  快手服务市场服务协议（用户版）（已失效）.md  快手电商商家授权服务协议（已失效）.md  快手电商商家服务市场服务协议（商家版）（已失效）.md  快手电商商家服务市场服务协议（服务商版）（已失效）.md  快手电商开放平台开发者协议（已失效）.md
docs/开发指南和规则协议/规则协议/开放平台/: 应用流量申请规则.md  开放平台安全开发规范.md  开放平台日志接入规范.md  快手电商开放平台开发者协议.md  快手电商开放平台运营规则.md  快手电商开放平台隐私政策.md
docs/开发指南和规则协议/规则协议/服务市场/: 入驻类目资质及保证金要求.md  快手服务市场「货源市场」服务商准入及清退规则.md  快手服务市场使用三方发品接口类服务商管理规范.md  快手服务市场客服外包类目管理规范.md  快手服务市场技术服务费收费规则.md  快手服务市场服务协议（服务商版）.md  快手服务市场服务协议（用户版）.md  快手服务市场违规举报规则.md  快手服务市场违规处罚规范.md  智能客服类目对接流程.md  服务市场上架审核标准.md  服务市场推荐资源位规则.md  服务市场管理规范.md  服务市场类目参考价要求.md
docs/开发者支持文档/开放平台/API调用/: K1001 - 当前库存不足，请减少预留库存.md  K1002 - 仅支持在快手小店PC APP进行编辑.md  K1003 - 添加商品接口报错：来源不可售卖.md  K1004 - 访问接口时返回“验签失败”“签名校验失败”.md  K1005 -接口报错：暂无站外分销推广权限.md  K1006 - order operation reject.md  K1007 - 接口报错：品牌资质未关联.md  K1008 - API调用触发限流告警.md  K1009 - 发货API拦截.md
docs/开发者支持文档/开放平台/业务咨询/: K6001 - 如何创建测试店铺.md  K6002 - 短信发送失败.md
docs/开发者支持文档/开放平台/应用授权/: K0002 - 交易功能上线之后服务商如何进行上线前开发测试.md  K0003 - 调用API时报错 “token中无scope权限”.md  K0004 - 访问接口时返回“鉴权失败”是什么原因？.md  K0005 - API接口返回 主账号不存在.md  K0006 - 错误信息：AUTHORIZATION_REVOKED.md  K0007 - 授权无法识别用户昵称.md  K0008 - 错误信息：refreshToken.discarded.md  K0009 - 报错 Invalid url.md  K0010 - 不属于此应用的授权用户或测试用户.md  K0011 - 用户如何扫码授权使用.md
docs/开发者支持文档/开放平台/应用管理/: K2001 - 安全扫描.md  K2002 - 回调地址更新.md  K2003 - 如何提升应用评分.md
docs/开发者支持文档/开放平台/数据安全/: K5001 - 订单数据导出.md  K5002- 开发者如何验证应用已完成加密.md  K5003- 应用加密后商家如何发货.md  K5004- 应用加密后商家如何获取明文.md  K5005- 应用加密后商家解密为明文的规则.md  K5006- 应用是否可以直接获取明文.md
docs/开发者支持文档/开放平台/消息推送/: K4001 - 消息未推送.md  K4002 - 消息重复推送.md  K4003 - 推送url不可达.md  K4003 - 消息内容openId为空.md  K4004 - 消息推送接收失败是否会重试.md
docs/开发者支持文档/开放平台/账号管理/: K3001 - 开发者账号如何更换类型.md  K3002 - 开发者账号登录和更换.md  K3003 - 开发者账号如何更改企业信息.md
docs/开发者支持文档/服务市场/保证金/: K8001-保证金常见问题.md
docs/开发者支持文档/服务市场/服务交易/: K9001-上线交易模式常见问题（服务商侧）.md  K9002-上线交易模式常见问题（商家侧）.md  K9003-快手服务市场技术服务费常见问题.md
docs/开发者支持文档/服务市场/账号服务/: K7001-服务市场常见问题.md  K7003-开发者账号相关问题.md  K7004-服务市场创建服务时AppKey列表空白.md  K7006-快手服务商退出规范.md
examples/: alias_and_param_serialization.py  basic_usage.py  cps_reco_topic_async.py  cps_reco_topic_sync.py  customer_service_examples.py  distribution_examples.py  distribution_plan_create_and_commission.py  distribution_public_category_async.py  distribution_public_category_sync.py  industry_examples.py  local_life_examples.py  order_money_helpers.py  performance_test.py  photo_sms_promotion_examples.py  second_distribution_apply_and_list.py  second_investment_activity_list_async.py  second_investment_activity_list_sync.py  sync_usage_example.py
src/kwaixiaodian/: __init__.py
src/kwaixiaodian/client/services/: photo.py  promotion.py  sms.py
